# content_project

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  команды.txt
api/: serializers.py  tasks.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
content/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
content/migrations/: 0001_initial.py
tests/: test_api.py
